# backend/api.yaml
@@ -91,6 +91,30 @@ definitions:
         enum: ["Male", "Female", "Other"]
         example: "Male"
 
+  update_user_def:
+    required:
+      - profilePic
+      - email  
+      - name
+    properties:
+      profilePic:
+        type: string
+        example: ""
+      email:
+        type: string
+        example: "rohit@mailinator.com"
+      name:
+        type: string
+        example: "Rohit Pandit"
+
+  upload_photo_def:
+    required:
+      - photo
+    properties:
+      photo:
+        type: string
+        example: ""
+
   attempt_question_def:
     required:
       - question_no
