# backend/src/api/model/User.js
@@ -5,20 +5,21 @@ const mongoose = require('mongoose');
 // Define the user schema
 const userSchema = new mongoose.Schema({
   email: { type: String, required: true, unique: true },
-  name: { type: String },
-  pin: { type: String },
-  deviceType: { type: String },
-  deviceToken: { type: String },
+  name: { type: String, default: '' },
+  pin: { type: String, default: '' },
+  deviceType: { type: String, default: '' },
+  deviceToken: { type: String, default: '' },
   currentChildActive: { type: mongoose.Schema.Types.ObjectId, ref: 'child' },
-  otp: { type: Number },
+  otp: { type: Number, default: null },
   otpVerification: { type: Boolean, default: false },
-  otpExpireTime: { type: Number },
-  pinChangedOtp: { type: Number },
+  otpExpireTime: { type: Number, default: null },
+  pinChangedOtp: { type: Number, default: null },
   pinChangedOtpVerification: { type: Boolean, default: false },
-  pinChangedOtpExpireTime: { type: Number },
+  pinChangedOtpExpireTime: { type: Number, default: null },
   isCreatedWithOtpVerification: { type: Boolean, default: false },
-  userType: { type: String, enum: [userTypeEnums.USER, userTypeEnums.ADMIN], default: userTypeEnums.USER},
-  totalPoints: { type: Number, default: 0 }
+  userType: { type: String, enum: [userTypeEnums.USER, userTypeEnums.ADMIN], default: userTypeEnums.USER },
+  totalPoints: { type: Number, default: 0 },
+  profilePic: { type: String, default: "" },
 }, { timestamps: true });
 
 // Create the User model
